--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sqlite3": "^5.1.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "uuid": "^9.0.1",
     "lucide-react": "^0.330.0",
     "tailwindcss": "^3.4.1"
   },
