--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Trabalho prático de desenvolvimento web",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "server": "node server/index.js"
   },
   "keywords": [
@@ -17,7 +17,6 @@
   "author": "Student",
   "license": "ISC",
   "dependencies": {
-    "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "express": "^4.18.2",
@@ -33,7 +32,9 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/express": "^4.17.21",
+    "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
+    "vite": "^5.0.11",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35"
   }
