--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "server": "node server/index.js",
-    "reset-db": "node server/reset-db.js"
+    "reset-db": "node server/reset-db.js",
+    "start": "NODE_ENV=production node server/index.js"
   },
   "keywords": [
     "academic",
