--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
   "author": "Student",
   "license": "ISC",
   "dependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.330.0",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sqlite3": "^5.1.7",
     "tailwindcss": "^3.4.1",
-    "uuid": "^9.0.1"
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1",
+    "vite": "^5.0.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11"
+    "@types/react-dom": "^18.2.19"
   }
 }
